--- a/install/ansible/tasks/nvim.yml
+++ b/install/ansible/tasks/nvim.yml
@@ -1,3 +1,6 @@
 ---
   - name: Update NVIM plugins
     command: " nvim --headless +Lazy update +qa"
+
+  - name: Update NVIM Mason
+    command: " nvim --headless +MasonUpdate +qa"
